# conocimiento_personal_RAG

./: .gitignore  README.md  app.py  config_sample.yaml  pyproject.toml
src/: model_cp.py  utils.py
static/: chat.js  scripts.js  styles.css
templates/: chat.html  input.html
